--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -59,8 +59,8 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: bundle/*.zip
-          asset_name: bundle.zip
+          asset_path: bundle/encrypted-kubeconfig-windows-amd64.zip
+          asset_name: encrypted-kubeconfig-windows-amd64.zip
           asset_content_type: application/zip
       - name: Upload Release Assets
         uses: actions/upload-release-asset@v1
@@ -68,8 +68,8 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: bundle/*.tar.gz
-          asset_name: bundle.tar.gz
+          asset_path: bundle/encrypted-kubeconfig-darwin-arm64.tar.gz
+          asset_name: encrypted-kubeconfig-darwin-arm64.tar.gz
           asset_content_type: application/gzip
       - name: Upload Release Assets
         uses: actions/upload-release-asset@v1
@@ -77,6 +77,15 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: bundle/*.yaml
-          asset_name: bundle.yaml
+          asset_path: bundle/encrypted-kubeconfig-linux-amd64.tar.gz
+          asset_name: encrypted-kubeconfig-linux-amd64.tar.gz
+          asset_content_type: application/gzip
+      - name: Upload Release Assets
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: bundle/encrypted-kubeconfig.yaml
+          asset_name: encrypted-kubeconfig.yaml
           asset_content_type: application/x-yaml
