fixed macos install and filename

--- a/encrypted-kubeconfig.yaml.template
+++ b/encrypted-kubeconfig.yaml.template
@@ -24,7 +24,7 @@ spec:
         os: linux
         arch: amd64
   - bin: encrypted-kubeconfig
-    uri: ${DOWNLOAD_URL}encrypted-kubeconfig-darwin-amd64.tar.gz
+    uri: ${DOWNLOAD_URL}encrypted-kubeconfig-darwin-arm64.tar.gz
     sha256: $SHA256_DARWIN_ARM64
     files:
       - from: LICENSE
@@ -34,7 +34,7 @@ spec:
     selector:
       matchLabels:
         os: darwin
-        arch: amd64
+        arch: arm64
   - bin: encrypted-kubeconfig.exe
     uri: ${DOWNLOAD_URL}encrypted-kubeconfig-amd64-windows.zip
     sha256: $SHA256_WINDOWS_AMD64
