--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -2,10 +2,14 @@ version: '3'
 
 vars:
   PLUGIN_VERSION: "1.0.0"
+  GIT_REV:
+    sh: git rev-parse --short HEAD
+  BUILD_DATE:
+    sh: date -u +"%Y-%m-%dT%H:%M:%SZ"
   BIN_DIRECTORY: "bin"
   BINARY_NAME: "kubectl-encrypted-kubeconfig"
   BUNDLE_BASE_NAME: "encrypted-kubeconfig"
-  GO_BUILD_ARGS: "-ldflags=\"-w -s\" -gcflags=all=\"-l -B\""
+  PACKAGE_NAME: "github.com/n4-de/{{.BINARY_NAME}}"
   TARGETS: 
     - linux-amd64
     - windows-amd64
@@ -35,7 +39,12 @@ tasks:
           export GOARCH=$GOARCH
           export GOOS=$GOOS
           go build \
-            {{.GO_BUILD_ARGS}} \
+            -gcflags=all="-l -B" \
+            -ldflags="-w -s
+            -X {{.PACKAGE_NAME}}/cmd.version_name={{.BINARY_NAME}} 
+            -X {{.PACKAGE_NAME}}/cmd.version={{.PLUGIN_VERSION}} 
+            -X {{.PACKAGE_NAME}}/cmd.commit_rev={{.GIT_REV}} 
+            -X {{.PACKAGE_NAME}}/cmd.build_date={{.BUILD_DATE}}" \
             -o {{.BIN_DIRECTORY}}/{{.BINARY_NAME}}-$TARGET \
             main.go
         done
