--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,12 @@ jobs:
         run: apk add -U curl zip gettext git
       - name: Install Task
         run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
+      - name: "Printenv"
+        run: printenv
+      - name: "PWD"
+        run: pwd
+      - name: "List"
+        run: ls -la
       - name: Run Task
         run: task clean bundle
       - name: Test Binary
