--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: CI Pipeline
 
 on:
   push:
-    tags:        
+    tags:
       - '*'
     branches:
       - main
@@ -18,6 +18,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Extract Tag
+        id: extract_tag
+        run: echo "RELEASE_TAG=${GITHUB_REF#refs/tags/:-dev}" >> $GITHUB_ENV
       - name: Install dependencies
         run: apk add -U curl zip gettext
       - name: Install Task
