--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Extract Tag
         id: extract_tag
-        run: echo "RELEASE_TAG=${GITHUB_REF#refs/tags/:-dev}" >> $GITHUB_ENV
+        run: echo "RELEASE_TAG=${GITHUB_REF_NAME:-dev}" >> $GITHUB_ENV
       - name: Install dependencies
         run: apk add -U curl zip gettext
       - name: Install Task
