fixed typo in krew plugin template; module updates

--- a/encrypted-kubeconfig.yaml.template
+++ b/encrypted-kubeconfig.yaml.template
@@ -3,7 +3,7 @@ kind: Plugin
 metadata:
   name: encrypted-kubeconfig
 spec:
-  version: "v${PLUGIN_VERSION}"
+  version: "${PLUGIN_VERSION}"
   # 'homepage' usually links to the GitHub repository of the plugin
   homepage: $HOMEPAGE
   shortDescription: "Authentication plugin for encrypted KUBECONFIG files."
