--- a/encrypted-kubeconfig.yaml.template
+++ b/encrypted-kubeconfig.yaml.template
@@ -4,12 +4,20 @@ metadata:
   name: encrypted-kubeconfig
 spec:
   version: "${PLUGIN_VERSION}"
-  # 'homepage' usually links to the GitHub repository of the plugin
-  homepage: $HOMEPAGE
-  shortDescription: "Authentication plugin for encrypted KUBECONFIG files."
+  homepage: https://github.com/n4-de/kubectl-encrypted-kubeconfig
+  shortDescription: "Encrypt KUBECONFIG files"
   description: |
-    This plugin allows to authenticate to Kubernetes API by decrypting the accesstoken inside of an encrypted KUBECONFIG.
-    This is done using the system keyring.
+    This plugin provides a way to work with encrypted KUBECONFIG files.
+    The plugin itself can also convert an unencrypted KUBECONFIG file into
+    an encrypted one.
+    The encryption part is done using the age library and the key used to
+    decrypt the KUBECONFIG file is stored in the system's keyring. This is
+    done using the go-keyring library, which supports Linux, Mac and and
+    Windows systems.
+    The idea behind the plugin is to provide additional protection for
+    KUBECONFIG files using Encryption at Rest, so that in the worst-case
+    scenario of a data leak, there is no need to worry about compromised
+    clusters.
   platforms:
   - bin: encrypted-kubeconfig
     uri: ${DOWNLOAD_URL}encrypted-kubeconfig-linux-amd64.tar.gz
